[rename] users -> auth
