# src/app/feature/auth/auth.controller.ts
@@ -5,21 +5,21 @@ import {
   UsePipes,
   ValidationPipe,
 } from '@nestjs/common';
-import { UsersService } from './users.service';
-import { LoginRequest, RegisterRequest } from './users.dto';
+import { AuthService } from './auth.service';
+import { LoginRequest, RegisterRequest } from './auth.dto';
 import { Users } from 'typeorm-model/Users';
 import { Public } from 'src/app/base/guard/public.decorator';
 
-@Controller('users')
-export class UsersController {
-  constructor(private readonly usersService: UsersService) {}
+@Controller('auth')
+export class AuthController {
+  constructor(private readonly authService: AuthService) {}
 
   // http://localhost:3000/user/register
   @Public()
   @Post('register')
   @UsePipes(new ValidationPipe({ whitelist: true }))
   async register(@Body() data: RegisterRequest): Promise<Users> {
-    return this.usersService.register(data);
+    return this.authService.register(data);
   }
 
   // http://localhost:3000/user/login
@@ -27,6 +27,6 @@ export class UsersController {
   @Post('login')
   @UsePipes(new ValidationPipe({ whitelist: true }))
   async login(@Body() data: LoginRequest) {
-    return this.usersService.login(data);
+    return this.authService.login(data);
   }
 }
